--- a/assets/scss/base/_reboot.scss
+++ b/assets/scss/base/_reboot.scss
@@ -12,22 +12,44 @@ body {
 }
 
 // Headings
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: var(--heading-font);
 }
 
-h1 { font-size: 3em; }
-h2 { font-size: 1.7em; }
-h3 { font-size: 1.5em; }
-h4 { font-size: 1.3em; }
-h5 { font-size: 1.2em; }
-h6 { font-size: 1.1em; }
+h1 {
+  font-size: 3em;
+}
+h2 {
+  font-size: 1.7em;
+}
+h3 {
+  font-size: 1.5em;
+}
+h4 {
+  font-size: 1.3em;
+}
+h5 {
+  font-size: 1.2em;
+}
+h6 {
+  font-size: 1.1em;
+}
 
 // Content spacing
 .content {
-  h1, h2, h3, h4, h5, h6 {
-    margin-block-start: .8em;
-    margin-block-end: .6em;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-block-start: 0.8em;
+    margin-block-end: 0.6em;
   }
 
   p {
@@ -36,7 +58,7 @@ h6 { font-size: 1.1em; }
   }
 
   li > p {
-    margin-block-end: .5em;
+    margin-block-end: 0.5em;
   }
 
   li:last-child p {
@@ -50,15 +72,16 @@ h6 { font-size: 1.1em; }
 }
 
 // Rich text
-b, strong {
-  color: var(--icon-color); 
+b,
+strong {
+  color: var(--icon-color);
 }
 
 em {
-  color: var(--accent-color); 
+  color: var(--accent-color);
 
   strong {
-    color: var(--accent-color); 
+    color: var(--accent-color);
   }
 }
 
@@ -72,12 +95,12 @@ blockquote {
 
 // Links
 a {
-  color: var(--link-color); 
+  color: var(--link-color);
   text-decoration: none;
   transition: color, background 200ms ease-in-out;
 
   &:hover {
-    color: var(--link-hover-color); 
+    color: var(--link-hover-color);
     text-decoration: underline;
   }
 }
@@ -100,10 +123,10 @@ button {
 svg.icon {
   width: 1em;
   height: 1em;
-  fill: var(--icon-color); 
+  fill: var(--icon-color);
 
   &:hover {
-    fill: var(--icon-hover-color); 
+    fill: var(--icon-hover-color);
     text-decoration: none;
   }
 }
