--- a/layouts/partials/head/stylesheet.html
+++ b/layouts/partials/head/stylesheet.html
@@ -9,8 +9,15 @@
 {{ $main := resources.Get "scss/main.scss" | toCSS $options }}
 {{ $print := resources.Get "scss/print.scss" | toCSS $options }}
 
+
 <!-- Async Load -->
-<link rel="preload" href="{{ $main.Permalink }}" as="style" media="screen" onload="this.onload=null;this.rel='stylesheet'">
+<link
+  rel="preload"
+  href="{{ $main.Permalink }}"
+  as="style"
+  media="screen"
+  onload="this.onload=null;this.rel='stylesheet'"
+/>
 
 <!-- Google Fonts -->
 <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
@@ -19,9 +26,9 @@
 
 <!-- NoJS Fallback -->
 <noscript>
-  <link rel="stylesheet" href="{{ $main.Permalink }}">
+  <link rel="stylesheet" href="{{ $main.Permalink }}" />
   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Assistant:wght@200;400;700&family=Source+Sans+3:wght@200;400;700&display=swap"> -->
 </noscript>
 
 <!-- Printing -->
-<link href="{{ $print.Permalink }}" media="print" rel="stylesheet">
+<link href="{{ $print.Permalink }}" media="print" rel="stylesheet" />
