--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -3,5 +3,4 @@
   {{ partial "lib/icon.html" (dict "name" "xmark" "class" "collapse") }}
 </button>
 
-<aside id="sidebar">
-</aside>
+<aside id="sidebar"></aside>
