--- a/assets/scss/main/_footer.scss
+++ b/assets/scss/main/_footer.scss
@@ -4,10 +4,10 @@
   align-items: center;
   color: var(--header-fg);
   background: var(--header-bg);
-  
+
   .copyright {
     color: var(--muted-color);
-    font-size: .9em;
+    font-size: 0.9em;
     text-align: center;
     text-transform: uppercase;
   }
@@ -15,7 +15,7 @@
   .social {
     display: flex;
     flex-flow: row wrap;
-    column-gap: .5em;
+    column-gap: 0.5em;
     padding: 0;
     font-size: 1.5em;
   }
