--- a/assets/scss/main/_header.scss
+++ b/assets/scss/main/_header.scss
@@ -10,7 +10,7 @@
   font-family: var(--heading-font);
   color: var(--header-fg);
   background: var(--header-bg);
-} 
+}
 
 #logo {
   img {
@@ -33,7 +33,9 @@
   flex-flow: row nowrap;
   column-gap: 2em;
 
-  &, ul, li {
+  &,
+  ul,
+  li {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -57,7 +59,7 @@
     &[aria-current="false"] {
       font-weight: normal;
     }
-    
+
     &:hover {
       .submenu {
         visibility: visible;
@@ -68,21 +70,21 @@
   .submenu {
     visibility: hidden;
     position: absolute;
-    left: -.5em;
+    left: -0.5em;
     display: flex;
     flex-flow: column nowrap;
-    padding: .5em;
+    padding: 0.5em;
     background: white;
     border-radius: 5px;
-    font-size: .9em;
+    font-size: 0.9em;
 
     li:first-child {
-      margin-top: .5em;
+      margin-top: 0.5em;
     }
   }
 }
 
-@media(max-width: 1025px) {
+@media (max-width: 1025px) {
   #header {
     height: auto;
     flex-flow: column nowrap;
@@ -90,7 +92,7 @@
   }
 }
 
-@media(max-width: 730px) {
+@media (max-width: 730px) {
   #nav {
     &[aria-expanded="false"] {
       #nav-control {
@@ -108,14 +110,14 @@
         visibility: hidden;
       }
     }
-    
+
     &[aria-expanded="true"] {
       #nav-control {
         z-index: 2;
         position: fixed;
         top: 2em;
         right: 2em;
-        
+
         .expand {
           display: none;
         }
@@ -151,11 +153,10 @@
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
-    row-gap: .25em;
+    row-gap: 0.25em;
 
     li:last-child {
       margin-bottom: 2em;
     }
   }
 }
-
