--- a/layouts/partials/head/favicons.html
+++ b/layouts/partials/head/favicons.html
@@ -1,8 +1,8 @@
 <!-- default SVG -->
-<link rel="icon" href="/brand/icon.svg" type="image/svg+xml">
+<link rel="icon" href="/brand/icon.svg" type="image/svg+xml" />
 
 <!-- 32×32 ICO for ancient browsers -->
-<link rel="shortcut icon" href="/brand/favicon.ico" sizes="any">
+<link rel="shortcut icon" href="/brand/favicon.ico" sizes="any" />
 
 <!-- mask SVG for Apple (black outline with color fill) -->
-<link rel="mask-icon" href="/brand/icon-mask.svg" color="#FFFFFF">
+<link rel="mask-icon" href="/brand/icon-mask.svg" color="#FFFFFF" />
