--- a/layouts/partials/head/opengraph.html
+++ b/layouts/partials/head/opengraph.html
@@ -2,18 +2,26 @@
 
 <!-- CORE -->
 <!-- Title, without branding. -->
-<meta property="og:title" content="{{ .Page.Title }}">
+<meta property="og:title" content="{{ .Page.Title }}" />
 <!-- Name, not URL -->
-<meta property="og:site_name" content="{{ .Site.Title }}">
+<meta property="og:site_name" content="{{ .Site.Title }}" />
 <!-- URL. Should match canonical URL for SEO. Unique identifier for your article. -->
-<meta property="og:url" content="{{ .Page.Permalink }}">
+<meta property="og:url" content="{{ .Page.Permalink }}" />
 <!-- OPTIONAL description. 2-4 sentences. -->
-<meta property="og:description" content="{{ with .Page.Description }}{{ . }}{{ else }}{{ .Site.Params.description }}{{ end }}">
+<meta
+  property="og:description"
+  content="{{ with .Page.Description }}
+    {{ . }}
+  {{ else }}
+    {{ .Site.Params.description }}
+  {{ end }}
+  "
+/>
 
 <!-- Image for article. Facebook suggests at least 1200 x 630. -->
-<meta property="og:image" content="{{ "/brand/opengraph.png" | absURL }}"/>
-<meta property="og:image:width" content="1200"/>
-<meta property="og:image:height" content="630"/>
+<meta property="og:image" content="{{ "/brand/opengraph.png" | absURL }}" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
 
 <!-- ADDITIONAL -->
 <!-- UID for Facebook insights -->
